feat: add Anchor component

--- a/apps/nextjs-example/posts/lorem-ipsum.mdx
+++ b/apps/nextjs-example/posts/lorem-ipsum.mdx
@@ -9,7 +9,7 @@ date: 2023-01-01
 
 ### Ipsum in blandit
 
-Integer hendrerit, ipsum in blandit rhoncus, orci sapien ullamcorper nibh, vitae fringilla lectus velit eget magna. Curabitur erat justo, dictum vitae bibendum at, lacinia non dolor. Vestibulum consequat hendrerit sem vel consequat. Duis pellentesque volutpat justo sed elementum. Curabitur euismod tempor mollis.
+Integer hendrerit, [ipsum in blandit](https://exaple.com) rhoncus, orci sapien ullamcorper nibh, vitae fringilla lectus velit eget magna. Curabitur erat justo, dictum vitae bibendum at, lacinia non dolor. Vestibulum consequat hendrerit sem vel consequat. Duis pellentesque volutpat justo sed elementum. Curabitur euismod tempor mollis.
 
 - Nullam efficitur quis urna eget pellentesque.
 - Cras elementum ullamcorper odio, dapibus ultrices justo mattis ut.
