test: fix tests to use the new ports doc: add instruction to run tests preparations

--- a/apps/docs/stories/Development.mdx
+++ b/apps/docs/stories/Development.mdx
@@ -41,6 +41,12 @@ pnpm run lint
 pnpm run format
 ```
 
+Before running tests for the first time, run the following command to prepare your environment for testing.
+
+```console
+pnpm run test:prepare
+```
+
 Linters and formatters are also run in a pre-commit hook for all the staged files.
 
 ## Building
